--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 description: A Helm chart for Monasca-agent
 name: monasca-agent
-version: v0.1
+version: 1.0.0
 sources:
-- https://github.com/stackhpc/monasca-agent-chart
+- https://github.com/openstack/monasca-agent
 maintainers:
 - name: Bharat Kunwar
   email: bharat@stackhpc.com
