--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,8 +1,9 @@
-{{- if .Values.fluentd.enabled -}}
+{{- if .Values.plugins.daemonset }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}-fluent-conf
+  name: {{ template "fullname" . }}-daemonset-plugins
   labels:
     app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -10,62 +11,20 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 data:
-  fluent.conf: |
-    # Accept logs from Docker Fluentd log driver
-    <source>
-      @type forward
-      port 24224
-      bind 0.0.0.0
-    </source>
-    
-    <filter *.**>
-      @type parser
-      key_name log
-      format /^(?<Timestamp>\S+ \S+)\s-\s(?<programname>\S+)\s-\s(?<log_level>\S+)\s-\s(?<log>.*)$/
-      time_key Timestamp
-      time_format %Y-%m-%d %H:%M:%S,%N
-    </filter>
-    
-    # Add a timestamp dimension with ms precision to all logs to record
-    # the event time. The event time is the time extracted from the log
-    # message in all cases where the time_key is set, and the time the
-    # record entered fluentd if no time_key is set logs.
-    # NOTE: ISO8601 is used to be compatible with the Monasca pipeline.
-    <filter *.**>
-      @type record_transformer
-      enable_ruby
-      <record>
-        timestamp ${time.strftime('%Y-%m-%dT%H:%M:%S.%3NZ')}
-      </record>
-    </filter>
-    
-    # Docker saves all logs under the 'log' field. The fluentd-monasca
-    # plugin assumes that they are saved under the 'message' field. Here
-    # we map the 'log' field to the 'message' field for all logs. If
-    # we do this directly in the first format filter, rather than here,
-    # the record_transformer filter fails with an error about the
-    # missing log field (Fluent v0.14).
-    <filter *.**>
-      @type record_transformer
-      enable_ruby true
-      <record>
-        message ${record["log"]}
-        docker_tag ${tag}
-      </record>
-      remove_keys log
-    </filter>
-    
-    <match *.**>
-        @type copy
-        <store>
-           @type monasca
-           keystone_url {{ .Values.keystone.url }}
-           monasca_log_api {{ .Values.monasca_log_url }}
-           monasca_log_api_version v3.0
-           username {{ .Values.keystone.os_username }}
-           password {{ .Values.keystone.os_password }}
-           domain_id {{ lower .Values.keystone.os_project_domain_name }}
-           project_name {{ .Values.keystone.os_project_name }}
-        </store>
-    </match>
-{{- end -}}
+{{ toYaml .Values.plugins.daemonset | indent 2 }}
+{{- end}}
+{{- if .Values.plugins.deployment }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ template "fullname" . }}-deployment-plugins
+  labels:
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    component: "{{ template "fullname" . }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+data:
+{{ toYaml .Values.plugins.deployment | indent 2 }}
+{{- end}}
