--- a/templates/role.yaml
+++ b/templates/role.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: "{{ .Release.Name }}-role"
 rules:
-  - apiGroups: ["", "extensions", "storage.k8s.io"]
+  - apiGroups: ["", "extensions", "storage.k8s.io", "metrics.k8s.io"]
     verbs: ["get", "list"]
     resources:
       - namespaces
